Revert "Mutation data counts"